hsreplaynet/static/styles/base.scss
html {
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

::selection {
	color: white;
	background: $red;
}

::-moz-selection {
	color: white;
	background: $red;
}

body {
	background-color: $offwhite;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

body,
html {
	margin: 0;
	padding: 0;
	font-family: "Noto Sans", sans-serif;
}

#content {
	min-height: 500px;
}

#tabletop {
	height: calc(100% - 100px);
	margin: 1em 0;
}

#navbar-logo {
	padding: 8px;
	height: 50px;
	width: 43px;
	float: left;
}

.container .navbar-collapse {
	padding-left: 0;
	padding-right: 0;
}

.navbar {
	border-radius: 0;

	.nav > li .custom-icon {
		padding-right: 3px;
	}
}

.custom-icon {
	background-size: contain;
	background-repeat: no-repeat;
	vertical-align: middle;
	position: relative;
	display: inline-block;
	width: 17px;
	height: 17px;
}

header .navbar {
	z-index: 100;
}

.navbar-hsreplay {
	background-color: $blue;
	color: $offwhite;
	margin-bottom: 0;
	border: 0;
	font-weight: bold;

	.navbar-toggle {
		border-color: $offwhite;

		.icon-bar {
			background-color: $offwhite;
		}
	}

	.navbar-brand {
		padding: 0;
		padding-right: 15px;

		h1 {
			padding: 12px 0;
			display: inline-block;
			font-size: 1.2em;
			margin: 0;
			font-weight: bold;
		}
	}

	.nav > li {
		> a {
			padding-bottom: 12px;

			&.social-button {
				padding-bottom: 4px;
			}

			&.text-premium {
				color: $premium;
			}
		}

		&.active > a {
			position: relative;
			color: $lighterblue;
		}

		&.active-premium > a {
			color: $premium;

			> &:focus,
			> &:hover {
				color: $premium-hover;
			}
		}

		&.open {
			> a {
				background-color: transparent;
				color: $lighterblue;

				&.text-premium {
					color: $premium;
				}
			}
		}

		@media (min-width: 768px) {
			&.active > a {
				border-bottom: 3px solid $lighterblue;
			}

			&.active-premium > a {
				border-bottom-color: $premium;
			}

			&.open > a {
				border-bottom: 3px solid $lighterblue;

				&.text-premium {
					border-bottom-color: $premium;
				}
			}
		}

		> a:focus,
		> a:hover {
			color: $lightblue;
			background: transparent;

			&.text-premium {
				color: $premium-hover;
			}
		}

		> .promo-button {
			&:focus,
			&:hover {
				color: $red;
				background-color: $offwhite;
				border-bottom: 0;
			}
		}

		&.button-container {
			padding-top: 6px;

			.btn {
				margin-right: -10px;
				padding-right: 20px;
				padding-bottom: 8px;
				padding-left: 20px;
			}
		}

		.glyphicon {
			padding-right: 3px;
		}
	}

	a {
		color: inherit;
	}

	.promo-button {
		font-size: 1em;
		padding-top: 8px;
		padding-bottom: 8px;
	}

	@media (max-width: 767px) {
		.promo-button,
		.promo-button-outline {
			width: auto;
			float: left;
			margin: 0 15px 10px 10px;
		}
	}

	.navbar-nav .open .dropdown-menu {
		background-color: $blue;
		padding: 0;
		border: 1px solid $darkblue;
		border-radius: 0;

		.dropdown-header {
			background: $darkblue;
			color: $lightblue;
			padding: 0.5em 1em;
			font-size: 1em;
		}

		.active > a {
			&,
			&:focus,
			&:hover {
				color: white;
				background-color: $lightcyan;
			}
		}

		> li {
			border-bottom: 1px solid $darkblue;
			&:last-of-type {
				border-bottom: none;
			}

			> a {
				color: white;
				padding: 10px 20px;
				font-weight: bold;

				&.text-premium {
					color: $premium;
				}

				&:focus,
				&:hover {
					background-color: $lightblue1;
				}
			}
		}

		.active > a {
			&:focus,
			&:hover {
				background-color: $lightercyan;
			}
		}
	}
}

.open .dropdown-toggle .caret {
	transform: rotate(180deg);
}

.site-footer {
	background-color: $blue;
	clear: both;
	color: $lightgrey;
	margin-top: auto;
	padding: 1em;
	width: 100%;
	border-top: 1px solid $darkblue;
	display: flex;
	align-items: center;
	justify-content: space-around;

	a {
		color: inherit;
	}

	abbr {
		border-bottom: none;
	}

	.footer-content {
		max-width: 930px;
		flex: 1 1 0;
	}

	.footer-ad-container {
		@media (max-width: 1529px) {
			display: none;
		}
	}

	.footer-brand {
		padding: 0;
		padding-right: 15px;
		text-align: center;

		img {
			height: 38px;
			width: 30px;
		}

		h1 {
			display: inline-block;
			font-size: 1.7em;
			font-weight: bold;
			margin: 12px 0 0 5px;
			padding: 12px 0;
			position: relative;
			top: 4px;
		}

		a,
		a:hover,
		a:active {
			text-decoration: none;
		}
	}

	.horizontal-icons {
		margin: 1em 0;
		list-style-type: none;
		padding-left: 0;
		text-align: center;

		li {
			display: inline-block;
			margin: 0.5em;
		}
	}

	.footer-menu {
		font-size: small;

		@media (max-width: 991px) {
			font-size: initial;
			margin-top: 2em;
		}

		h2,
		h3,
		h4 {
			font-size: 1.4em;
			font-weight: bold;
			color: white;
		}

		li {
			margin: 0.3em 0;
		}

		ul {
			list-style-type: none;
			padding: 0px;
		}
	}

	.copyright {
		font-size: small;
		padding: 1em 15px;
	}
}

/* Generic pages (eg. account, flatpages) */

.page {
	padding: 0 3em;
	max-width: 950px;
	margin: 0 auto;

	section {
		margin-bottom: 2.5em;
	}
}

#flatpage-content {
	margin: 0 auto;
}

#flatpage-header {
	color: #333;
	text-align: center;
	font-size: 1.5em;
	padding: 1em;
}

/* Elements */

#site-messages {
	width: 100%;
	position: absolute;
	top: 50px;
	z-index: 100;
	text-align: center;
	pointer-events: none;

	ul.inner {
		background-color: $blue;
		border: solid white 1px;
		color: white;
		list-style: none;
		margin: 1em auto;
		padding: 1em;
		width: 400px;
		max-width: 100%;
	}
}

.alert {
	border-radius: 0;
}

/* Status message for uploads in progress */
#upload_processing-container {
	background-color: $blue;
	color: white;
	font-size: 1.8em;
	margin-top: 10%;
	padding: 3em;
	text-align: center;

	a,
	a:active,
	a:hover {
		color: inherit;
		text-decoration: underline;
	}
}

.popover,
.popover-title {
	border-radius: 0;
}

.popover {
	color: black;
	padding: 0;
	border-color: $lightblue;
}

.popover-title {
	background-color: $lightblue;
	color: white;
}

.popover.bottom > .arrow:after {
	border-bottom-color: $lightblue;
}

.navbar-hsreplay .popover {
	margin-top: 7px;
}

.popover-close {
	line-height: 0;
	padding: 8px 0 8px 4px;
	vertical-align: middle;
	font-size: 1.7em;
	display: block;
	float: right;
	color: white !important;
	opacity: 0.8;

	&:hover,
	&:active {
		text-decoration: none;
	}
}

.premium-popover {
	border-color: $premium;

	.popover-title {
		background-color: $premium;
		color: black;
	}

	&.bottom > .arrow:after {
		border-bottom-color: $premium;
	}
}

.text-help {
	color: $help;
}

.text-twitch {
	color: $twitch-purple;
}

.collapse-animate-height {
	max-height: 0;
	transition: max-height 0.3s ease-out;
	overflow: hidden;
	box-sizing: padding-box;

	&.show {
		max-height: 500px;
	}
}

.list-group-item {
	&:first-child,
	&:last-child {
		border-radius: 0;
	}
}

.site-modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1999;
	pointer-events: none;

	> * {
		pointer-events: all;
	}
}

#modal-dummy {
	display: none;
}

.site-modal-scroller {
	position: absolute;
	top: 0;
	left: 0;
	min-width: 100%;
	min-height: 100%;
	overflow-y: scroll;
}

.site-modal-container {
	position: absolute;
	top: 0;
	left: 0;
	min-width: 100%;
	min-height: 100%;
	z-index: 2000;
	background-color: rgba(0, 0, 0, 0.5);
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 10vh 0;
}

